--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <p>Olá! Sou um professor apaixonado por tecnologia e ensino, com ampla experiência em desenvolvimento web e
                 sistemas distribuídos. Minhas aulas são focadas em tecnologias modernas como Angular, NextJS, e Django,
                 sempre buscando proporcionar uma aprendizagem prática e dinâmica.</p>
+            <p>Teste.</p>
         </div>
     </section>
 
