novo parágrafo na brach develop

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 sistemas distribuídos. Minhas aulas são focadas em tecnologias modernas como Angular, NextJS, e Django,
                 sempre buscando proporcionar uma aprendizagem prática e dinâmica.</p>
             <p>Teste.</p>
+            <p>Novo parágrafo da develop</p>
         </div>
     </section>
 
