--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 sempre buscando proporcionar uma aprendizagem prática e dinâmica.</p>
             <p>Teste.</p>
             <p>Novo parágrafo da develop</p>
+            <p>Parágrafo inserido diretamente no github</p>
         </div>
     </section>
 
